# Print-tui

./: .gitignore  LICENSE  README.md  app.py  cups_wrapper.py  main.py  parse_css.py  print_tui.tcss  pyproject.toml  test.py  test2.py
ui/: jobs.py  print_dialog.py  printers.py
